test/sema/typeck/trait/zero-err.dora
fn f() { Array[String]::zero(12i64); }
